--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             position: fixed;
             align-items: center;
             justify-content: center;
+            color: #fff;
+            background: linear-gradient(90deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
         }
     </style>
 </head>
@@ -22,7 +24,10 @@
 <body>
 
 <div class="container">
-    <div>;)</div>
+    <div>
+        <p>"Gojira is a warning. A warning to every one of us. When mankind falls into conflict with nature, monsters are born."</p>
+        <p><em>- Dr. Hayashida</em></p>
+    </div>
 </div>
 
 </body>
