--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <style>
+        * {
+            margin: 0;
+            border: 0;
+            padding: 0;
+            outline: 0;
+        }
         .container {
             height: 100%;
             width: 100%;
@@ -16,7 +22,7 @@
             align-items: center;
             justify-content: center;
             color: #fff;
-            background: linear-gradient(90deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
+            background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
         }
     </style>
 </head>
