Add Gojira still to home page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             align-items: center;
             justify-content: center;
             color: #fff;
+            background-image: url(/images/gojira/still.jpg);
+            background-size: cover;
             background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
         }
     </style>
@@ -30,10 +32,10 @@
 <body>
 
 <div class="container">
-    <div>
+    <!-- <div>
         <p>"Gojira is a warning. A warning to every one of us. When mankind falls into conflict with nature, monsters are born."</p>
         <p><em>- Dr. Hayashida</em></p>
-    </div>
+    </div> -->
 </div>
 
 </body>
