--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             padding: 0;
             outline: 0;
         }
+        html { 
+          background: url(images/gojira/still.jpg) no-repeat center center fixed; 
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
+          /* background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%); */
+        }
         .container {
             height: 100%;
             width: 100%;
@@ -22,9 +30,6 @@
             align-items: center;
             justify-content: center;
             color: #fff;
-            background-image: url(/images/gojira/still.jpg);
-            background-size: cover;
-            background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
         }
     </style>
 </head>
