--- a/index.html
+++ b/index.html
@@ -14,34 +14,62 @@
             padding: 0;
             outline: 0;
         }
-        html { 
-          background: url(images/gojira/still.jpg) no-repeat center center fixed; 
-          -webkit-background-size: cover;
-          -moz-background-size: cover;
-          -o-background-size: cover;
-          background-size: cover;
-          /* background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%); */
+
+        html {
+            background: url(images/gojira/still.jpg) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
         }
-        .container {
+
+        /* .container {
             height: 100%;
             width: 100%;
             display: flex;
-            position: fixed;
-            align-items: center;
+            flex-flow: column nowrap;
             justify-content: center;
+            align-items: center;
+            background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
+        } */
+
+        .logo {
+            position: absolute;
+            top: 2rem;
+            left: 1rem;
+        }
+
+        .quote {
+            position: absolute;
+            bottom: 1rem;
+            right: 1rem;
+            margin: 1rem;
+            border-radius: 10px;
+            padding: 1rem;
             color: #fff;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 1rem;
+            line-height: 1.2rem;
+            background-color: rgba(0, 0, 0, 0.4);
+            /* box-shadow: 0 3px 2px 2px rgba(0, 0, 0, 0.2); */
+        }
+
+        .quote .character {
+            font-style: italic;
+            text-align: end;
         }
     </style>
 </head>
 
 <body>
 
-<div class="container">
-    <!-- <div>
-        <p>"Gojira is a warning. A warning to every one of us. When mankind falls into conflict with nature, monsters are born."</p>
-        <p><em>- Dr. Hayashida</em></p>
-    </div> -->
-</div>
+    <div class="container">
+        <div class="logo"><img src="images/clintonium-logo.png" alt="Unchain the New Reactions"></div>
+        <div class="quote">
+            <p class="line">"Gojira is a warning.<br>A warning to every one of us.<br>When mankind falls into conflict with nature,<br>monsters are born."</p>
+            <p class="character">- Dr. Hayashida</p>
+        </div>
+    </div>
 
 </body>
 
