Remove quote and move logo to botttom center

--- a/index.html
+++ b/index.html
@@ -32,14 +32,21 @@
             align-items: center;
             background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
         } */
-
+        
         .logo {
+            position: absolute;
+            bottom: 0.5rem;
+            left: 50%;
+            margin-left: -110px;
+        }
+
+        /*.logo {
             position: absolute;
             top: 2rem;
             left: 1rem;
-        }
+        }*/
 
-        .quote {
+        /*.quote {
             position: absolute;
             bottom: 1rem;
             right: 1rem;
@@ -51,24 +58,23 @@
             font-size: 1rem;
             line-height: 1.2rem;
             background-color: rgba(0, 0, 0, 0.4);
-            /* box-shadow: 0 3px 2px 2px rgba(0, 0, 0, 0.2); */
-        }
+        }*/
 
-        .quote .character {
+        /*.quote .character {
             font-style: italic;
             text-align: end;
-        }
+        }*/
     </style>
 </head>
 
 <body>
 
     <div class="container">
-        <div class="logo"><img src="images/clintonium-logo.png" alt="Unchain the New Reactions"></div>
-        <div class="quote">
+        <div class="logo"><img src="images/clintonium-logo.png" width="250" alt="Unchain the New Reactions"></div>
+        <!--<div class="quote">
             <p class="line">"Gojira is a warning.<br>A warning to every one of us.<br>When mankind falls into conflict with nature,<br>monsters are born."</p>
             <p class="character">- Dr. Hayashida</p>
-        </div>
+        </div>-->
     </div>
 
 </body>
