--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="container">
         <div class="logo">
-            <img src="images/clintonium-logo.png" width="250" alt="Clintonium Logo" title="&quot;Gojira is a warning. A warning to every one of us. When mankind falls into conflict with nature, monsters are born.&quot; - Dr. Hayashida">
+            <img src="images/clintonium-logo.png" width="250" alt="Clintonium Logo" title="&quot;Gojira is a warning. A warning to every one of us. &#010;When mankind falls into conflict with nature, monsters are born.&quot; &#010;- Dr. Hayashida">
         <!--<div class="quote">
             <p class="line">"Gojira is a warning.<br>A warning to every one of us.<br>When mankind falls into conflict with nature,<br>monsters are born."</p>
             <p class="character">- Dr. Hayashida</p>
