Remove extraneous commented code

--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
             -o-background-size: cover;
             background-size: cover;
         }
-
-        /* .container {
-            height: 100%;
-            width: 100%;
-            display: flex;
-            flex-flow: column nowrap;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(0deg, rgba(5, 0, 92, 1) 0%, rgba(0, 0, 0, 1) 100%);
-        } */
         
         .logo {
             position: absolute;
@@ -39,45 +29,15 @@
             left: 50%;
             margin-left: -110px;
         }
-
-        /*.logo {
-            position: absolute;
-            top: 2rem;
-            left: 1rem;
-        }*/
-
-        /*.quote {
-            position: absolute;
-            bottom: 1rem;
-            right: 1rem;
-            margin: 1rem;
-            border-radius: 10px;
-            padding: 1rem;
-            color: #fff;
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 1rem;
-            line-height: 1.2rem;
-            background-color: rgba(0, 0, 0, 0.4);
-        }*/
-
-        /*.quote .character {
-            font-style: italic;
-            text-align: end;
-        }*/
     </style>
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="logo">
-            <img src="images/clintonium-logo.png" width="250" alt="Clintonium Logo" title="&quot;Gojira is a warning. A warning to every one of us. &#010;When mankind falls into conflict with nature, monsters are born.&quot; &#010;- Dr. Hayashida">
-        <!--<div class="quote">
-            <p class="line">"Gojira is a warning.<br>A warning to every one of us.<br>When mankind falls into conflict with nature,<br>monsters are born."</p>
-            <p class="character">- Dr. Hayashida</p>
-        </div>-->
-    </div>
-
+   <div class="container">
+      <div class="logo">
+         <img src="images/clintonium-logo.png" width="250" alt="Clintonium Logo" title="&quot;Gojira is a warning. A warning to every one of us. &#010;When mankind falls into conflict with nature, monsters are born.&quot; &#010;- Dr. Hayashida">
+      </div><!-- /.logo -->
+   </div><!-- /.container -->
 </body>
 
 </html>
