Fiddle with display of logo title quote once more

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
    <div class="container">
       <div class="logo">
-         <img src="images/clintonium-logo.png" width="250" alt="Clintonium Logo" title="&quot;Gojira is a warning. A warning to every one of us. &#010;When mankind falls into conflict with nature, monsters are born.&quot; &#010;- Dr. Hayashida">
+         <img src="images/clintonium-logo.png" width="250" alt="Clintonium Logo" title="&quot;Gojira is a warning. A warning to every one of us.&#010;When mankind falls into conflict with nature,&#010;monsters are born.&quot;&#010;&nbsp; &nbsp; &nbsp;- Dr. Hayashida">
       </div><!-- /.logo -->
    </div><!-- /.container -->
 </body>
